data/derived/fa15/progs/unify/prog3992.ml.out
Characters 84-86:
  |Neg (e1) -> "(" ^ e1 ^" * -1)" 
                     ^^
Error: This expression has type expr but an expression was expected of type
         string
